- Added color on chat - Fixed some SQL file errors - Fixed overlapping text bug on chat - Removed some depreciated functions

--- a/trunk/html/data/modules/mod_chat/styles/style.css
+++ b/trunk/html/data/modules/mod_chat/styles/style.css
@@ -92,5 +92,4 @@
 #chat_content p {
 	padding: 0px;
 	margin: 0px;
-	height: 14px;
 }
